<resources>
    <string name="app_name">SY Cloud</string>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="jqdz">机器地址</string>
    <string name="jqzt1">机器状态:正常</string>
    <string name="jqzt2">机器状态:不正常</string>
    <string name="cplb">产品类别:</string>
    <string name="price">¥</string>
    <string name="present">%</string>
    <string name="ci">次</string>
    <string name="hint">请输入</string>
    <string name="use_money">可用余额</string>
    <string name="description">产品描述:</string>
    <string name="productName">产品名称:</string>
    <string name="userName">用户名</string>
    <string name="balance_hint">输入金额超过余额</string>
    <string name="loading">正在加载</string>
    <string name="loadCompleted">没有更多数据</string>
    <string name="text_no_song">无数据</string>
    <string name="myAgent">我的代理</string>
    <string name="txsy">提现收益</string>
    <string name="startDate">开始时间</string>
    <string name="endDate">结束时间</string>
    <string name="authentication">身份验证</string>
    <string name="wxdl">微信登录</string>
    <string name="zhdl">账号登录</string>
    <string name="zczh">注册SY新账号</string>
    <string name="home">首页</string>
    <string name="sys">扫一扫</string>
    <string name="sk">收款</string>
    <string name="balance">余额</string>
    <string name="syygjfw">SY云管家服务</string>
    <string name="fwtx">服务提醒</string>
    <string name="myAsset">我的设备</string>
    <string name="cpzx">产品中心</string>
    <string name="sjcz">手机充值</string>
    <string name="ykkg">遥控开关</string>
    <string name="more">更多</string>
    <string name="friends">朋友</string>
    <string name="fx">发现</string>
    <string name="smy">扫码页</string>
    <string name="fh">返回</string>
    <string name="ewm">二维码/条码</string>
    <string name="xc">相册</string>
    <string name="jqbm">机器编码:</string>
    <string name="ddje">订单金额</string>
    <string name="revenueSetting">设置营收分成</string>
    <string name="jrtl">今日退礼:</string>
    <string name="sysfq">扫一扫,向我付钱</string>
    <string name="moneySetting">设置金额</string>
    <string name="moneyClear">清除金额</string>
    <string name="savePhoto">保存图片</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="details">明细</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="bankAccount">银行卡</string>
    <string name="transactionsDetail">交易记录</string>
    <string name="transactionType">交易类型</string>
    <string name="zhichu">支出</string>
    <string name="sx">筛选</string>
    <string name="cpys">产品营收</string>
    <string name="transferExpense">转账支出</string>
    <string name="qrcodeGather">二维码收款</string>
    <string name="selectTransferType">选择交易类型</string>
    <string name="all">全部</string>
    <string name="transfer">转账</string>
    <string name="qrPayAndgather">二维码收付</string>
    <string name="cztx">充值提现</string>
    <string name="orderRefund">订单退款</string>
    <string name="checkpaypsd">请输入支付密码,以验证身份</string>
    <string name="saveQrcode">保存二维码</string>
    <string name="bindProduct">绑定商品</string>
    <string name="cpbh">产品编号</string>
    <string name="srbh">请输入产品编号</string>
    <string name="jg">产品价格</string>
    <string name="srjg">请输入产品价格</string>
    <string name="xzlx">选择类型</string>
    <string name="packageConfig">套餐设置</string>
    <string name="selectTpe">请选择产品类型</string>
    <string name="mine">我的</string>
    <string name="me">我</string>
    <string name="syNumber">SY号:</string>
    <string name="wdsyfc">我的营收分成</string>
    <string name="setting">设置</string>
    <string name="payPsd">支付密码</string>
    <string name="versionInfo">版本信息</string>
    <string name="loginOut">退出登录</string>
    <string name="service_name">服务通知</string>
    <string name="withDrawSuccess">你的提现已成功 </string>
    <string name="withDrawFailed">你的提现已失败</string>
    <string name="txsb">提现失败</string>
    <string name="shbtg">审核不通过</string>
    <string name="txsqbh">您的提现申请审核失败已驳回  </string>
    <string name="cpysdz">您的产品营收已到账</string>
    <string name="xzzcfc">新增资产分成</string>
    <string name="zhi">至</string>
    <string name="update">版本更新</string>
    <string name="addBankCard">添加银行卡</string>
    <string name="bindBankCard">绑定银行卡</string>
    <string name="accountName">开户名</string>
    <string name="accountNum">卡号</string>
    <string name="bankName">开户行</string>
    <string name="bankType">卡类型</string>
    <string name="next">下一步</string>
    <string name="zsj">( Main Operator)</string>
    <string name="fsj">( Sub Operator )</string>
    <string name="deleteFriend">删除好友</string>
    <string name="receivedRefund">您的退款已到账</string>
    <string name="tytjhy">同意添加好友</string>
    <string name="zhye">账户余额(元)</string>
    <string name="zrsm">昨日扫码:</string>
    <string name="jrsm">今日扫码(元):</string>
    <string name="sr">收入</string>
    <string name="tk">退款-</string>
    <string name="cpsyjl">产品收益记录</string>
    <string name="orderNumber">订单号:</string>
    <string name="editDivide">修改资产分成</string>
    <string name="editProductInfo">修改商品信息</string>
    <string-array name="fcArray">
        <item>Today\'s Shared Income</item>
        <item>Yesterday\'s Shared Income</item>
        <item>Week\'s Shared Income</item>
        <item>Moth\'s Shared Income</item>
        <item>Total Shared Income</item>
    </string-array>
    <string-array name="tbArray">
        <item>  </item>
        <item>Today\'s Coin</item>
        <item>Yesterday\'s Coin</item>
        <item>Week\'s Coin</item>
        <item>Moth\'s Coin</item>
        <item>Total Coin</item>
    </string-array>
    <string-array name="zcArray">
        <item>  </item>
        <item>Today\'s Note</item>
        <item>Yesterday\'s Note</item>
        <item>Week\'s Note</item>
        <item>Moth\'s Note</item>
        <item>Total Note</item>
    </string-array>
    <string name="zrfc">昨日分成</string>
    <string name="jrfc">今日分成</string>
    <string name="bzfc">本周分成</string>
    <string name="byfc">本月分成</string>
    <string name="zfc">总分成</string>
    <string name="jrtb">今日投币</string>
    <string name="zrtb">昨日投币</string>
    <string name="bztb">本周投币</string>
    <string name="bytb">本月投币</string>
    <string name="ztb">总投币</string>
    <string name="jrzc">今日纸钞</string>
    <string name="zrzc">昨日纸钞</string>
    <string name="bzzc">本周纸钞</string>
    <string name="byzc">本月纸钞</string>
    <string name="zzc">总纸钞</string>
    <string name="jtbm">机台编码</string>
    <string name="wdfc">我的分成</string>
    <string name="jtdz">机台地址</string>
    <string name="search">搜索</string>
    <string name="addFriend">添加朋友</string>
    <string name="wdsyh">我的SY号</string>
    <string name="szysfc">设置营收分成</string>
    <string name="ggjg">更改价格</string>
    <string name="xgspxx">修改商品信息</string>
    <string name="ylsz">音量设置</string>
    <string name="jlsz">机率设置</string>
    <string name="bzsz">币种设置</string>
    <string name="blsz">比例设置</string>
    <string name="gzyy">故障原因</string>
    <string name="jcsp">解除商品</string>
    <string name="fcsj">分成商家</string>
    <string name="add">添加</string>
    <string name="qr">确认</string>
    <string name="editPrice">修改价格</string>
    <string name="qsrjg">请输入价格</string>
    <string name="xgzcxx">修改资产信息</string>
    <string name="srmc">输入名称</string>
    <string name="srdz">输入地址</string>
    <string name="qbsp">全部产品</string>
    <string name="zsjcp">主商家产品</string>
    <string name="fsjcp">副商家产品</string>
    <string name="searchHint">产品名称/产品编码/地址/</string>
    <string name="test">测试</string>
    <string name="ndj">扭蛋机</string>
    <string name="amy">按摩椅</string>
    <string name="bbd">BB凳</string>
    <string name="ybj">摇摆机</string>
    <string name="kfj">咖啡机</string>
    <string name="wwj">娃娃机</string>
    <string name="dqj">打枪机</string>
    <string name="dds">打地鼠</string>
    <string name="kfdh">客服电话</string>
    <string name="allAsset">总产品</string>
    <string name="normal">在线</string>
    <string name="abnormal">离线</string>
    <string name="sj">售价</string>
    <string name="yuan">元</string>
    <string name="bi">币</string>
    <string name="fc">分成:</string>
    <string name="sm">扫码:</string>
    <string name="tb">投币:</string>
    <string name="tl">退礼:</string>
    <string name="zb">纸币:</string>
    <string name="fenc">分成</string>
    <string name="et_voice">音量设置</string>
    <string name="et_jv">机率调整</string>
    <string name="et_coin">几币一玩</string>
    <string name="parameter1">0-10</string>
    <string name="parameter2">0-255</string>
    <string name="yjpw">一键配网</string>
    <string name="newfriend">新的朋友</string>
    <string name="bankCard">银行卡</string>
    <string name="binding">绑定</string>
    <string name="totalYs">总营收(元)</string>
    <string name="unbindAsset">解除资产</string>
    <string name="totalIncome">总资产</string>
    <string name="todayCoin">今日币数</string>
    <string name="today">今日</string>
    <string name="yesterday">昨日</string>
    <string name="week">本周</string>
    <string name="month">本月</string>
    <string name="total">总营收</string>
    <string name="dz">产品地址</string>
    <string name="mc">产品名称</string>
    <string name="qxzlx">请选择产品类型</string>
    <string name="selectBankCard">选择银行卡</string>
    <string name="note">设置备注</string>
    <string name="area">地区</string>
    <string name="fcsdje">分成所得金额</string>
    <string name="fcbl">分成比例</string>
    <string name="jysj">交易时间</string>
    <string name="byys">本月营收</string>
    <string name="sxf">手续费</string>
    <string name="dzyh">到账银行</string>
    <string name="txsj">提现时间</string>
    <string name="zzje">转账金额</string>
    <string name="payWay">付款方式</string>
    <string name="friendNum">位好友</string>
    <string name="tjlp">添加礼品</string>
    <string name="spcsjg">商品出售价格:</string>
    <string name="hddj">货道(游戏)单价:</string>
    <string name="xykc">现有库存:</string>
    <string name="hdsphdgl">货道商品获得概率:</string>
    <string name="hdrl">货道容量:</string>
    <string name="kc">库存</string>
    <string name="unit1">元/局</string>
    <string name="unit2">个</string>
    <string name="unit3">局/个</string>
    <string name="supply_product">补货</string>
    <string name="clean_product">清货</string>
    <string name="batch_supply">批量补货</string>
    <string name="cancle_supply">取消补货</string>
    <string name="batch_clean">批量清货</string>
    <string name="cancle_clean">取消清货</string>
    <string name="commodityNumber">货道总数:</string>
    <string name="sumStock">库存总容量</string>
    <string name="tlbl">退礼比例(局/个):</string>
    <string name="currentStock">现有库存:</string>
    <string name="myScore">我的积分</string>
    <string name="unLock">解锁</string>
    <string name="getScore">获取积分</string>
    <string name="applyScore">申请积分</string>
    <string name="backScore">返还积分</string>
    <string name="hq">获取</string>
    <string name="sq">申请</string>
    <string name="aqyz">安全验证</string>
    <string name="selectAuthWay">选择验证方式</string>
    <string name="freeMode">免费模式</string>
    <string name="parameterChange">参数调整</string>
    <string-array name="gameArray">
        <item>测试</item>
        <item>扭蛋机</item>
        <item>按摩椅</item>
        <item>BB凳</item>
        <item>摇摆机</item>
        <item>咖啡机</item>
        <item>娃娃机</item>
        <item>打枪机</item>
        <item>打地鼠</item>
    </string-array>
    <string-array name="proportionArray">

        <item>1币1分</item>
        <item>1币2分</item>
        <item>1币5分</item>
        <item>1币10分</item>
        <item>1币20分</item>
        <item>1币50分</item>


    </string-array>
    <string-array name="currencyArray">
        <item>€ EUR</item>
        <item>$ USD</item>
        <item>¥ CNY</item>
        <item>£ GBP</item>
    </string-array>
    <string name="wifiName">wifi名称</string>
    <string name="wifi_input_hint">请输入wifi密码</string>
    <string name="selectDate">选择日期</string>
    <string name="friendDetail">详细资料</string>
    <string name="sendMessage">发送消息</string>
    <string name="hint3">请输入比例</string>
</resources>