<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="versionCode"
            type="String" />

        <variable
            name="title"
            type="String" />

        <variable
            name="type"
            type="int" />


        <import type="android.view.View" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bklc"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{title}"
            android:textColor="#000" />


        <EditText
            android:id="@+id/sp"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shap_et"
            android:textSize="35pt"
            android:paddingLeft="5dp"
            android:hint="@string/hint3" />


        <include layout="@layout/layout_divider3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:divider="@drawable/divider2"
            android:showDividers="middle">

            <TextView
                android:id="@+id/cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/c1"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/qr"
                android:textColor="@color/theme_color"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</layout>